OpenDocumentSelector: Fetch recent list in an idle

We get some crashes due to the fetching of the recent list
in a thread like other lists of the store.

GtkRecentManager can't be use in a thread other
than the main one.

https://bugzilla.gnome.org/show_bug.cgi?id=744611